labdell/ingress_lixo/ingress_siteoficial/ingress_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: ingress
    meta.helm.sh/release-namespace: ingress
  creationTimestamp: "2021-10-07T13:02:45Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx-ingress
    helm.sh/chart: nginx-ingress-0.11.0
  name: ingress-nginx-ingress
  namespace: ingress
  resourceVersion: "39400"
  uid: 84301a42-d47f-4181-b30a-565bb8a865ac
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ingress-nginx-ingress
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/port: "9113"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: ingress-nginx-ingress
    spec:
      containers:
      - args:
        - -nginx-plus=false
        - -nginx-reload-timeout=60000
        - -enable-app-protect=false
        - -nginx-configmaps=$(POD_NAMESPACE)/ingress-nginx-ingress
        - -default-server-tls-secret=$(POD_NAMESPACE)/ingress-nginx-ingress-default-server-tls
        - -ingress-class=nginx
        - -health-status=false
        - -health-status-uri=/nginx-health
        - -nginx-debug=true
        - -v=2
        - -nginx-status=true
        - -nginx-status-port=8080
        - -nginx-status-allow-cidrs=127.0.0.1
        - -report-ingress-status
        - -external-service=ingress-nginx-ingress
        - -enable-leader-election=true
        - -leader-election-lock-name=ingress-nginx-ingress-leader-election
        - -enable-prometheus-metrics=true
        - -prometheus-metrics-listen-port=9113
        - -prometheus-tls-secret=
        - -enable-custom-resources=true
        - -enable-tls-passthrough=false
        - -enable-snippets=false
        - -enable-preview-policies=false
        - -ready-status=true
        - -ready-status-port=8081
        - -enable-latency-metrics=false
        image: nginx/nginx-ingress:2.0.0
        imagePullPolicy: IfNotPresent
        name: ingress-nginx-ingress
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 9113
          name: prometheus
          protocol: TCP
        - containerPort: 8081
          name: readiness-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /nginx-ready
            port: readiness-port
            scheme: HTTP
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 101
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: ingress-nginx-ingress
      serviceAccountName: ingress-nginx-ingress
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-10-07T13:02:48Z"
    lastUpdateTime: "2021-10-07T13:02:48Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-10-07T13:02:45Z"
    lastUpdateTime: "2021-10-07T13:02:48Z"
    message: ReplicaSet "ingress-nginx-ingress-55b9c7c679" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
