labdell/ingress_lixo/ingress_siteoficial/ingress_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    prometheus.io/port: "9113"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
  creationTimestamp: "2021-10-07T13:02:45Z"
  generateName: ingress-nginx-ingress-55b9c7c679-
  labels:
    app: ingress-nginx-ingress
    pod-template-hash: 55b9c7c679
  name: ingress-nginx-ingress-55b9c7c679-sv9mq
  namespace: ingress
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: ingress-nginx-ingress-55b9c7c679
    uid: 8ec7d474-5edb-40e0-bf12-046c4ba1e4bb
  resourceVersion: "39396"
  uid: c34a068e-1c94-4852-b593-c515fe1bfa58
spec:
  containers:
  - args:
    - -nginx-plus=false
    - -nginx-reload-timeout=60000
    - -enable-app-protect=false
    - -nginx-configmaps=$(POD_NAMESPACE)/ingress-nginx-ingress
    - -default-server-tls-secret=$(POD_NAMESPACE)/ingress-nginx-ingress-default-server-tls
    - -ingress-class=nginx
    - -health-status=false
    - -health-status-uri=/nginx-health
    - -nginx-debug=false
    - -v=1
    - -nginx-status=true
    - -nginx-status-port=8080
    - -nginx-status-allow-cidrs=127.0.0.1
    - -report-ingress-status
    - -external-service=ingress-nginx-ingress
    - -enable-leader-election=true
    - -leader-election-lock-name=ingress-nginx-ingress-leader-election
    - -enable-prometheus-metrics=true
    - -prometheus-metrics-listen-port=9113
    - -prometheus-tls-secret=
    - -enable-custom-resources=true
    - -enable-tls-passthrough=false
    - -enable-snippets=false
    - -enable-preview-policies=false
    - -ready-status=true
    - -ready-status-port=8081
    - -enable-latency-metrics=false
    - --watch-ingress-without-class=true
    image: nginx/nginx-ingress:2.0.0
    imagePullPolicy: IfNotPresent
    name: ingress-nginx-ingress
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
    - containerPort: 443
      name: https
      protocol: TCP
    - containerPort: 9113
      name: prometheus
      protocol: TCP
    - containerPort: 8081
      name: readiness-port
      protocol: TCP
    readinessProbe:
      failureThreshold: 3
      httpGet:
        path: /nginx-ready
        port: readiness-port
        scheme: HTTP
      periodSeconds: 1
      successThreshold: 1
      timeoutSeconds: 1
    resources: {}
    securityContext:
      allowPrivilegeEscalation: true
      capabilities:
        add:
        - NET_BIND_SERVICE
        drop:
        - ALL
      runAsUser: 101
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-rjbff
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: k8s-node01
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: ingress-nginx-ingress
  serviceAccountName: ingress-nginx-ingress
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-rjbff
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2021-10-07T13:02:32Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2021-10-07T13:02:35Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2021-10-07T13:02:35Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2021-10-07T13:02:45Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://281531b99f7dcf8c7970b2c86b6a3476f95d8d4a24187d16f48fa17810b993fc
    image: nginx/nginx-ingress:2.0.0
    imageID: docker-pullable://nginx/nginx-ingress@sha256:aceb1a03ea71d300c3bb3d513c460bf328e148352bc3a0e75b8500a094c4cb1a
    lastState: {}
    name: ingress-nginx-ingress
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2021-10-07T13:02:34Z"
  hostIP: 192.168.0.111
  phase: Running
  podIP: 10.32.0.2
  podIPs:
  - ip: 10.32.0.2
  qosClass: BestEffort
  startTime: "2021-10-07T13:02:32Z"
