labdell/ingress_lixo/ingress_siteoficial/appsvc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsvc1
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app1
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
