labdell/ingress_lixo/ingress_siteoficial/ingress_svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: ingress-svc
  namespace: ingress-nginx
spec:
  ports:
  - appProtocol: http
    name: http
    nodePort: 31080
    port: 80
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    nodePort: 31443
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: nginx-ingress-lb 
  type: NodePort
