labdell/ingress_lixo/ingress_siteoficial/rota2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache 
spec:
  rules:
  - host: 
    http:
      paths:
      - backend:
          service:
            name: httpd
            port:
              number: 80
        path: /httpd
        pathType: Prefix
