labdell/ingress_lixo/ingress_siteoficial/rota_dom1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dell-k8s.com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "app1.dell-k8s.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: appsvc1
            port:
              number: 80
  - host: "app2.dell-k8s.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: appsvc2
            port:
              number: 80
